--- a/apps/mobile-wallet/ios/Alephium/Info.plist
+++ b/apps/mobile-wallet/ios/Alephium/Info.plist
@@ -66,6 +66,12 @@
     <string>Allow $(PRODUCT_NAME) to access your microphone</string>
     <key>NSMotionUsageDescription</key>
     <string>Allow $(PRODUCT_NAME) to access your device motion</string>
+    <key>UIAppFonts</key>
+    <array>
+      <string>Inter-Medium.ttf</string>
+      <string>Inter-SemiBold.ttf</string>
+      <string>Inter-Bold.ttf</string>
+    </array>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
