--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -29,6 +29,7 @@
     "@expo/vector-icons": "^14.0.4",
     "@json-rpc-tools/utils": "^1.7.6",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/cli": "^15.1.3",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/elements": "^1.3.14",
