--- a/apps/mobile-wallet/ios/Alephium/Info.plist
+++ b/apps/mobile-wallet/ios/Alephium/Info.plist
@@ -68,9 +68,9 @@
     <string>Allow $(PRODUCT_NAME) to access your device motion</string>
     <key>UIAppFonts</key>
     <array>
-      <string>Inter-Medium.ttf</string>
-      <string>Inter-SemiBold.ttf</string>
-      <string>Inter-Bold.ttf</string>
+      <string>Inter18pt-Medium.ttf</string>
+      <string>Inter18pt-SemiBold.ttf</string>
+      <string>Inter18pt-Bold.ttf</string>
     </array>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
