Migrate mw WalletConnectSessionProposalModal props
Related to #947
Closes #856

Also see: https://github.com/alephium/alephium-frontend/pull/1026#pullrequestreview-2512003381

--- a/packages/shared-react/package.json
+++ b/packages/shared-react/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@alephium/eslint-config": "workspace:*",
     "@alephium/typescript-config": "workspace:*",
+    "@alephium/walletconnect-provider": "1.5.1",
     "@types/react": "~18.2.79",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
