--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -110,6 +110,7 @@
     "react-native-webview": "^13.12.0",
     "react-qr-code": "^2.0.7",
     "react-redux": "^8.0.5",
+    "redux-devtools-expo-dev-plugin": "^0.2.1",
     "styled-components": "^6.1.8",
     "stylis": "^4.0.0",
     "text-encoding": "^0.7.0",
