--- a/apps/desktop-wallet/package.json
+++ b/apps/desktop-wallet/package.json
@@ -122,6 +122,7 @@
     "jsdom": "^21.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.287.0",
+    "msw": "^2.7.0",
     "nanoid": "^3.3.8",
     "posthog-js": "^1.52.0",
     "qrloop": "^1.4.1",
