--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -94,6 +94,7 @@
     "react-native-background-timer": "^2.4.1",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-get-random-values": "~1.11.0",
+    "react-native-image-colors": "^2.4.0",
     "react-native-localize": "^3.2.0",
     "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "6.3.0",
