--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
       "elliptic@<6.6.0": ">=6.6.0",
       "@sentry/browser@<7.119.1": ">=7.119.1",
       "cross-spawn@<7.0.5": ">=7.0.5",
-      "happy-dom@<15.10.2": ">=15.10.2"
+      "happy-dom@<15.10.2": ">=15.10.2",
+      "phin@<3.7.1": ">=3.7.1"
     }
   },
   "manypkg": {
