Use Tanstack to fetch Alph.land API data

--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -42,12 +42,14 @@
     "@sentry/react-native": "^6.0.0",
     "@shopify/flash-list": "1.6.4",
     "@shopify/react-native-skia": "1.3.10",
+    "@tanstack/react-query": "5.45.0",
     "@walletconnect/core": "2.17.2",
     "@walletconnect/jsonrpc-types": "^1.0.4",
     "@walletconnect/keyvaluestorage": "1.1.1",
     "@walletconnect/react-native-compat": "2.17.2",
     "@walletconnect/sign-client": "2.17.2",
     "@walletconnect/utils": "2.17.2",
+    "axios": "^1.7.4",
     "big-integer": "^1.6.51",
     "colord": "^2.9.3",
     "dayjs": "^1.10.7",
