--- a/packages/shared-react/package.json
+++ b/packages/shared-react/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@alephium/shared": "workspace:*",
+    "@tanstack/react-query": "5.45.0",
+    "axios": "^1.7.4",
     "react": "^18.2.0",
     "react-redux": "^8.0.5"
   },
