--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -79,6 +79,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
     "fast-text-encoding": "^1.0.6",
+    "intl-pluralrules": "^2.0.1",
     "lodash": "^4.17.21",
     "lottie-react-native": "^6.7.0",
     "lucide-react-native": "^0.456.0",
