--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -27,6 +27,7 @@
     "@alephium/walletconnect-provider": "1.5.1",
     "@alephium/web3": "1.5.1",
     "@expo/vector-icons": "^14.0.4",
+    "@fugashu/alphland-api-client": "^1.0.4",
     "@json-rpc-tools/utils": "^1.7.6",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "^11.3.1",
