--- a/packages/shared-react/package.json
+++ b/packages/shared-react/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@alephium/shared": "workspace:*",
+    "@alephium/web3": "1.5.1",
     "@tanstack/react-query": "5.45.0",
     "axios": "^1.7.4",
     "react": "^18.2.0",
