--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -26,6 +26,7 @@
     "@alephium/token-list": "^0.0.19",
     "@alephium/walletconnect-provider": "1.11.3",
     "@alephium/web3": "1.11.3",
+    "@dev-plugins/react-query": "^0.1.0",
     "@expo/vector-icons": "^14.0.4",
     "@fugashu/alphland-api-client": "^1.0.4",
     "@json-rpc-tools/utils": "^1.7.6",
