--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
       "@sentry/browser@<7.119.1": ">=7.119.1",
       "cross-spawn@<7.0.5": ">=7.0.5",
       "happy-dom@<15.10.2": ">=15.10.2",
-      "phin@<3.7.1": ">=3.7.1"
+      "phin@<3.7.1": ">=3.7.1",
+      "elliptic@<=6.6.0": ">=6.6.1"
     }
   },
   "manypkg": {
