--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -4,8 +4,21 @@
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.50.1",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "@vercel/style-guide": "^5.0.0",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-config-turbo": "^1.10.12",
-    "eslint-plugin-react-compiler": "19.0.0-beta-21e868a-20250216"
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-compiler": "19.0.0-beta-21e868a-20250216",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0"
+  },
+  "peerDependencies": {
+    "eslint": "^8.48.0"
   }
 }
