--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
       "cross-spawn@<7.0.5": ">=7.0.5",
       "happy-dom@<15.10.2": ">=15.10.2",
       "phin@<3.7.1": ">=3.7.1",
-      "elliptic@<=6.6.0": ">=6.6.1"
+      "elliptic@<=6.6.0": ">=6.6.1",
+      "esbuild@<=0.24.2": ">=0.25.0",
+      "@babel/runtime@<7.26.10": ">=7.26.10",
+      "@babel/helpers@<7.26.10": ">=7.26.10"
     }
   },
   "manypkg": {
