--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -44,7 +44,9 @@
     "@sentry/react-native": "^6.0.0",
     "@shopify/flash-list": "1.6.4",
     "@shopify/react-native-skia": "1.3.10",
+    "@tanstack/query-async-storage-persister": "^5.69.0",
     "@tanstack/react-query": "5.45.0",
+    "@tanstack/react-query-persist-client": "^5.45.0",
     "@walletconnect/core": "2.17.2",
     "@walletconnect/jsonrpc-types": "^1.0.4",
     "@walletconnect/keyvaluestorage": "1.1.1",
