--- a/packages/shared-react/package.json
+++ b/packages/shared-react/package.json
@@ -17,9 +17,11 @@
   },
   "dependencies": {
     "@alephium/shared": "workspace:*",
+    "@alephium/token-list": "^0.0.19",
     "@alephium/web3": "1.11.3",
     "@tanstack/react-query": "5.45.0",
     "axios": "^1.8.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-redux": "^8.0.5"
   },
