--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -99,6 +99,7 @@
     "react-native-get-random-values": "~1.11.0",
     "react-native-image-colors": "^2.4.0",
     "react-native-localize": "^3.2.0",
+    "react-native-mmkv": "^3.2.0",
     "react-native-pager-view": "6.5.1",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^3.16.7",
