--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -41,7 +41,7 @@
     "@sentry/react-native": "^6.10.0",
     "@shopify/flash-list": "1.7.3",
     "@shopify/react-native-skia": "1.5.0",
-    "@tanstack/query-async-storage-persister": "^5.69.0",
+    "@tanstack/query-sync-storage-persister": "5.45.0",
     "@tanstack/react-query": "5.45.0",
     "@tanstack/react-query-persist-client": "^5.45.0",
     "@walletconnect/core": "2.17.2",
