--- a/apps/desktop-wallet/package.json
+++ b/apps/desktop-wallet/package.json
@@ -63,7 +63,7 @@
     "@alephium/token-list": "^0.0.19",
     "@alephium/typescript-config": "workspace:*",
     "@alephium/walletconnect-provider": "1.11.3",
-    "@alephium/web3": "1.11.3",
+    "@alephium/web3": "1.12.0-danube.1",
     "@alephium/web3-wallet": "1.11.3",
     "@electron/notarize": "^1.2.3",
     "@json-rpc-tools/utils": "^1.7.6",
