--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -25,7 +25,7 @@
     "@alephium/shared-react": "workspace:*",
     "@alephium/token-list": "^0.0.19",
     "@alephium/walletconnect-provider": "1.11.3",
-    "@alephium/web3": "1.11.3",
+    "@alephium/web3": "1.12.0-danube.1",
     "@dev-plugins/react-query": "^0.2.0",
     "@expo/vector-icons": "^14.0.4",
     "@fugashu/alphland-api-client": "^1.0.4",
