--- a/packages/shared-react/package.json
+++ b/packages/shared-react/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@alephium/shared": "workspace:*",
     "@alephium/token-list": "^0.0.19",
-    "@alephium/web3": "1.11.3",
+    "@alephium/web3": "1.12.0-danube.1",
     "@tanstack/react-query": "5.45.0",
     "axios": "^1.8.2",
     "lodash": "^4.17.21",
