--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@alephium/token-list": "^0.0.19",
     "@alephium/walletconnect-provider": "1.11.3",
-    "@alephium/web3": "1.11.3",
+    "@alephium/web3": "1.12.0-danube.1",
     "@metamask/scure-bip39": "^2.1.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@walletconnect/sign-client": "2.17.2",
