--- a/packages/keyring/package.json
+++ b/packages/keyring/package.json
@@ -24,6 +24,7 @@
     "@alephium/web3-wallet": "1.12.0-danube.1",
     "@metamask/scure-bip39": "^2.1.1",
     "blakejs": "^1.1.1",
+    "buffer": "^6.0.3",
     "ethereum-cryptography": "^2.1.3"
   },
   "devDependencies": {
