--- a/packages/shared-react/package.json
+++ b/packages/shared-react/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@alephium/eslint-config": "workspace:*",
     "@alephium/typescript-config": "workspace:*",
-    "@alephium/walletconnect-provider": "1.11.3",
+    "@alephium/walletconnect-provider": "1.12.0-danube.1",
     "@types/react": "~18.3.20",
     "tsup": "^8.4.0",
     "typescript": "^5.3.3"
