--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -24,6 +24,7 @@
     "@alephium/shared-crypto": "workspace:*",
     "@alephium/shared-react": "workspace:*",
     "@alephium/token-list": "^0.0.19",
+    "@alephium/wallet-dapp-provider": "workspace:*",
     "@alephium/walletconnect-provider": "1.11.3",
     "@alephium/web3": "1.11.3",
     "@dev-plugins/react-query": "^0.2.0",
