--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -24,8 +24,8 @@
     "@alephium/shared-crypto": "workspace:*",
     "@alephium/shared-react": "workspace:*",
     "@alephium/token-list": "^0.0.19",
-    "@alephium/walletconnect-provider": "1.12.0-danube.1",
-    "@alephium/web3": "1.12.0-danube.1",
+    "@alephium/walletconnect-provider": "2.0.0-rc.2",
+    "@alephium/web3": "2.0.0-rc.2",
     "@dev-plugins/react-query": "^0.2.0",
     "@expo/vector-icons": "^14.0.4",
     "@fugashu/alphland-api-client": "^1.0.4",
