--- a/packages/keyring/package.json
+++ b/packages/keyring/package.json
@@ -20,8 +20,8 @@
   "dependencies": {
     "@alephium/encryptor": "workspace:*",
     "@alephium/shared": "workspace:*",
-    "@alephium/web3": "1.12.0-danube.1",
-    "@alephium/web3-wallet": "1.12.0-danube.1",
+    "@alephium/web3": "2.0.0-rc.2",
+    "@alephium/web3-wallet": "2.0.0-rc.2",
     "@metamask/scure-bip39": "^2.1.1",
     "blakejs": "^1.1.1",
     "bn.js": "5.2.1",
