--- a/packages/shared-react/package.json
+++ b/packages/shared-react/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@alephium/shared": "workspace:*",
     "@alephium/token-list": "^0.0.19",
-    "@alephium/web3": "1.12.0-danube.1",
+    "@alephium/web3": "2.0.0-rc.2",
     "@tanstack/react-query": "5.45.0",
     "axios": "^1.8.2",
     "lodash": "^4.17.21",
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@alephium/eslint-config": "workspace:*",
     "@alephium/typescript-config": "workspace:*",
-    "@alephium/walletconnect-provider": "1.12.0-danube.1",
+    "@alephium/walletconnect-provider": "2.0.0-rc.2",
     "@types/react": "~18.3.20",
     "tsup": "^8.4.0",
     "typescript": "^5.3.3"
