Update to Expo 53 - building, but issues with WC Node polyfills
Will look into updating to ReOwn...

--- a/apps/mobile-wallet/android/gradle.properties
+++ b/apps/mobile-wallet/android/gradle.properties
@@ -59,3 +59,5 @@ android.compileSdkVersion=35
 android.targetSdkVersion=35
 android.buildToolsVersion=35.0.0
 android.extraMavenRepos=[]
+# Whether the app is configured to use edge-to-edge via the app config or `react-native-edge-to-edge` plugin
+expo.edgeToEdgeEnabled=false
