--- a/apps/desktop-wallet/package.json
+++ b/apps/desktop-wallet/package.json
@@ -41,7 +41,7 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@tanstack/react-query": "5.45.0",
+    "@tanstack/react-query": "5.45.1",
     "@tanstack/react-query-devtools": "^5.50.1",
     "electron-context-menu": "^3.1.2",
     "electron-is-dev": "^2.0.0",
@@ -71,15 +71,15 @@
     "@ledgerhq/hw-transport-webhid": "^6.29.4",
     "@ledgerhq/hw-transport-webusb": "^6.29.4",
     "@reduxjs/toolkit": "^1.9.1",
-    "@tanstack/react-query-persist-client": "^5.45.0",
+    "@tanstack/react-query-persist-client": "5.45.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^14.0.0",
     "@types/events": "^3.0.3",
     "@types/lodash": "^4.14.182",
     "@types/node": "^20.14.0",
-    "@types/react": "~18.3.20",
+    "@types/react": "~19.1.8",
     "@types/react-color": "^3.0.6",
-    "@types/react-dom": "^18.2.4",
+    "@types/react-dom": "^19.1.6",
     "@types/semver-compare": "^1.0.1",
     "@types/zxcvbn": "^4.4.1",
     "@vitejs/plugin-react": "^4.3.4",
@@ -116,18 +116,18 @@
     "nanoid": "^3.3.8",
     "posthog-js": "^1.52.0",
     "qrloop": "^1.4.1",
-    "react": "^18.3.1",
+    "react": "^19.1.0",
     "react-apexcharts": "^1.4.0",
     "react-color": "^2.19.3",
     "react-confetti": "^6.0.1",
     "react-custom-scroll": "^7.0.0",
     "react-detect-click-outside": "^1.1.2",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.1.0",
     "react-freeze": "^1.0.4",
     "react-hook-form": "^7.42.1",
     "react-i18next": "^13.2.1",
     "react-idle-timer": "^5.7.2",
-    "react-is": "^18.3.1",
+    "react-is": "^19.1.0",
     "react-player": "^2.16.0",
     "react-qr-code": "^2.0.15",
     "react-redux": "^8.0.5",
@@ -139,7 +139,7 @@
     "stylis": "^4.0.0",
     "ts-json-schema-generator": "^1.5.0",
     "type-fest": "^3.5.1",
-    "typescript": "^5.3.3",
+    "typescript": "~5.8.3",
     "vite": "^5.4.12",
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-svgr": "^3.2.0",
