--- a/apps/explorer/package.json
+++ b/apps/explorer/package.json
@@ -42,8 +42,8 @@
     "@alephium/web3": "1.11.3",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/query-sync-storage-persister": "5.45.0",
-    "@tanstack/react-query": "5.45.0",
-    "@tanstack/react-query-persist-client": "^5.45.0",
+    "@tanstack/react-query": "5.45.1",
+    "@tanstack/react-query-persist-client": "5.45.1",
     "@yornaath/batshit": "^0.10.1",
     "apexcharts": "^3.35.0",
     "axios": "^1.8.2",
@@ -54,13 +54,13 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "lodash": "^4.17.21",
     "qrcode.react": "^3.1.0",
-    "react": "^18.3.1",
+    "react": "^19.1.0",
     "react-apexcharts": "^1.4.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.1.0",
     "react-i18next": "^13.2.1",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.10.3",
-    "react-is": "^18.3.1",
+    "react-is": "^19.1.0",
     "react-middle-ellipsis": "^1.2.1",
     "react-page-visibility": "^7.0.0",
     "react-redux": "^8.0.5",
@@ -77,8 +77,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "^20.14.0",
-    "@types/react": "~18.3.20",
-    "@types/react-dom": "^18.2.4",
+    "@types/react": "~19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/react-page-visibility": "^6.4.1",
     "@types/react-router-dom": "^5.3.0",
     "@vitejs/plugin-react": "^4.3.4",
@@ -87,7 +87,7 @@
     "happy-dom": "^7.6.6",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "serve": "^14.1.2",
-    "typescript": "^5.3.3",
+    "typescript": "~5.8.3",
     "vite": "^5.4.12",
     "vite-plugin-svgr": "^3.2.0",
     "vite-tsconfig-paths": "^4.2.0",
