--- a/packages/keyring/package.json
+++ b/packages/keyring/package.json
@@ -35,6 +35,6 @@
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.5",
     "tslib": "^2.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
   }
 }
