--- a/packages/shared-crypto/package.json
+++ b/packages/shared-crypto/package.json
@@ -36,7 +36,7 @@
     "stream-browserify": "^3.0.0",
     "ts-jest": "^29.2.5",
     "tslib": "^2.3.1",
-    "typescript": "^5.3.3",
+    "typescript": "~5.8.3",
     "webpack": "^5.98.0",
     "webpack-cli": "^5.1.4"
   }
