--- a/packages/shared-react/package.json
+++ b/packages/shared-react/package.json
@@ -19,18 +19,18 @@
     "@alephium/shared": "workspace:*",
     "@alephium/token-list": "^0.0.19",
     "@alephium/web3": "1.11.3",
-    "@tanstack/react-query": "5.45.0",
+    "@tanstack/react-query": "5.45.1",
     "axios": "^1.8.2",
     "lodash": "^4.17.21",
-    "react": "^18.3.1",
+    "react": "^19.1.0",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@alephium/eslint-config": "workspace:*",
     "@alephium/typescript-config": "workspace:*",
     "@alephium/walletconnect-provider": "1.11.3",
-    "@types/react": "~18.3.20",
+    "@types/react": "~19.1.8",
     "tsup": "^8.4.0",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
   }
 }
