--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -45,6 +45,6 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "tslib": "^2.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
   }
 }
