--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -40,19 +40,19 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "@reduxjs/toolkit": "^1.9.1",
-    "@reown/walletkit": "^1.1.1",
+    "@reown/walletkit": "^1.2.7",
     "@sentry/react-native": "^6.14.0",
     "@shopify/flash-list": "1.7.6",
     "@shopify/react-native-skia": "2.0.0-next.4",
     "@tanstack/query-sync-storage-persister": "5.45.0",
     "@tanstack/react-query": "5.45.1",
     "@tanstack/react-query-persist-client": "5.45.1",
-    "@walletconnect/core": "2.17.2",
+    "@walletconnect/core": "2.21.3",
     "@walletconnect/jsonrpc-types": "^1.0.4",
     "@walletconnect/keyvaluestorage": "1.1.1",
-    "@walletconnect/react-native-compat": "2.17.2",
-    "@walletconnect/sign-client": "2.17.2",
-    "@walletconnect/utils": "2.17.2",
+    "@walletconnect/react-native-compat": "2.21.3",
+    "@walletconnect/sign-client": "2.21.3",
+    "@walletconnect/utils": "2.21.3",
     "axios": "^1.8.2",
     "big-integer": "^1.6.51",
     "colord": "^2.9.3",
@@ -99,17 +99,20 @@
     "react-native-aes-crypto": "^2.1.0",
     "react-native-background-timer": "^2.4.1",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-image-colors": "^2.4.0",
     "react-native-localize": "^3.2.0",
     "react-native-mmkv": "^3.2.0",
     "react-native-pager-view": "6.7.1",
     "react-native-progress": "^5.0.0",
+    "react-native-quick-crypto": "^0.7.14",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.11.2",
     "react-native-tab-view": "^3.5.1",
     "react-native-toast-message": "^2.1.8",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "^13.13.5",
     "react-qr-code": "^2.0.15",
@@ -127,7 +130,7 @@
     "@types/lodash": "^4.14.182",
     "@types/react": "~19.1.8",
     "@types/react-native-background-timer": "^2.0.2",
-    "@walletconnect/types": "2.17.2",
+    "@walletconnect/types": "2.21.3",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.48.0",
     "jest": "^29.7.0",
