Continue with dependency update mess

--- a/apps/explorer/package.json
+++ b/apps/explorer/package.json
@@ -41,33 +41,33 @@
     "@alephium/token-list": "^0.0.19",
     "@alephium/web3": "1.11.3",
     "@reduxjs/toolkit": "^1.9.1",
-    "@tanstack/query-sync-storage-persister": "5.45.0",
-    "@tanstack/react-query": "5.45.1",
-    "@tanstack/react-query-persist-client": "5.45.1",
+    "@tanstack/query-sync-storage-persister": "^5.81.2",
+    "@tanstack/react-query": "^5.81.2",
+    "@tanstack/react-query-persist-client": "^5.81.2",
     "@yornaath/batshit": "^0.10.1",
     "apexcharts": "^3.35.0",
     "axios": "^1.8.2",
     "colord": "^2.9.3",
     "dayjs": "^1.10.7",
-    "framer-motion": "^11.12.0",
+    "framer-motion": "^12.19.1",
     "i18next": "^23.4.6",
     "i18next-browser-languagedetector": "^8.0.0",
     "lodash": "^4.17.21",
     "qrcode.react": "^3.1.0",
-    "react": "^19.0.0",
+    "react": "19.0.0",
     "react-apexcharts": "^1.4.0",
-    "react-dom": "^19.0.0",
-    "react-i18next": "^13.2.1",
+    "react-dom": "19.0.0",
+    "react-i18next": "^15.5.3",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.10.3",
-    "react-is": "^19.1.0",
+    "react-is": "^19.0.0",
     "react-middle-ellipsis": "^1.2.1",
     "react-page-visibility": "^7.0.0",
-    "react-redux": "^8.0.5",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.3.0",
     "react-tooltip": "^5.25.1",
     "redux": "^4.2.0",
-    "styled-components": "^6.1.8",
+    "styled-components": "^6.1.19",
     "styled-normalize": "^8.0.7",
     "stylis": "^4.0.0"
   },
@@ -77,7 +77,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "^20.14.0",
-    "@types/react": "~19.1.8",
+    "@types/react": "~19.0.0",
     "@types/react-dom": "^19.1.6",
     "@types/react-page-visibility": "^6.4.1",
     "@types/react-router-dom": "^5.3.0",
