--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -44,9 +44,9 @@
     "@sentry/react-native": "^6.14.0",
     "@shopify/flash-list": "1.7.6",
     "@shopify/react-native-skia": "2.0.0-next.4",
-    "@tanstack/query-sync-storage-persister": "5.45.0",
-    "@tanstack/react-query": "5.45.1",
-    "@tanstack/react-query-persist-client": "5.45.1",
+    "@tanstack/query-sync-storage-persister": "^5.81.2",
+    "@tanstack/react-query": "^5.81.2",
+    "@tanstack/react-query-persist-client": "^5.81.2",
     "@walletconnect/core": "2.21.3",
     "@walletconnect/jsonrpc-types": "^1.0.4",
     "@walletconnect/keyvaluestorage": "1.1.1",
@@ -91,10 +91,10 @@
     "nanoid": "^3.3.8",
     "posthog-react-native": "^2.7.1",
     "qrloop": "^1.4.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.42.1",
-    "react-i18next": "^13.2.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-hook-form": "^7.58.1",
+    "react-i18next": "^15.5.3",
     "react-native": "0.79.4",
     "react-native-aes-crypto": "^2.1.0",
     "react-native-background-timer": "^2.4.1",
@@ -116,9 +116,9 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "^13.13.5",
     "react-qr-code": "^2.0.15",
-    "react-redux": "^8.0.5",
+    "react-redux": "^9.2.0",
     "redux-devtools-expo-dev-plugin": "^1.0.0",
-    "styled-components": "^6.1.8",
+    "styled-components": "^6.1.19",
     "stylis": "^4.0.0",
     "victory-native": "^36.6.10",
     "web3-validator": "^2.0.6"
@@ -128,7 +128,7 @@
     "@alephium/typescript-config": "workspace:*",
     "@babel/core": "^7.26.0",
     "@types/lodash": "^4.14.182",
-    "@types/react": "~19.1.8",
+    "@types/react": "~19.0.0",
     "@types/react-native-background-timer": "^2.0.2",
     "@walletconnect/types": "2.21.3",
     "babel-plugin-module-resolver": "^5.0.2",
