--- a/apps/desktop-wallet/package.json
+++ b/apps/desktop-wallet/package.json
@@ -41,7 +41,7 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@tanstack/react-query": "5.45.1",
+    "@tanstack/react-query": "^5.81.2",
     "@tanstack/react-query-devtools": "^5.50.1",
     "electron-context-menu": "^3.1.2",
     "electron-is-dev": "^2.0.0",
@@ -71,13 +71,13 @@
     "@ledgerhq/hw-transport-webhid": "^6.29.4",
     "@ledgerhq/hw-transport-webusb": "^6.29.4",
     "@reduxjs/toolkit": "^1.9.1",
-    "@tanstack/react-query-persist-client": "5.45.1",
+    "@tanstack/react-query-persist-client": "^5.81.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^14.0.0",
     "@types/events": "^3.0.3",
     "@types/lodash": "^4.14.182",
     "@types/node": "^20.14.0",
-    "@types/react": "~19.1.8",
+    "@types/react": "~19.0.0",
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "^19.1.6",
     "@types/semver-compare": "^1.0.1",
@@ -107,7 +107,7 @@
     "electron-devtools-installer": "^4.0.0",
     "eslint": "^8.48.0",
     "events": "^3.3.0",
-    "framer-motion": "^11.12.0",
+    "framer-motion": "^12.19.1",
     "i18next": "^23.4.6",
     "jsdom": "^21.1.1",
     "lodash": "^4.17.21",
@@ -116,26 +116,26 @@
     "nanoid": "^3.3.8",
     "posthog-js": "^1.52.0",
     "qrloop": "^1.4.1",
-    "react": "^19.0.0",
+    "react": "19.0.0",
     "react-apexcharts": "^1.4.0",
     "react-color": "^2.19.3",
     "react-confetti": "^6.0.1",
     "react-custom-scroll": "^7.0.0",
     "react-detect-click-outside": "^1.1.2",
-    "react-dom": "^19.0.0",
+    "react-dom": "19.0.0",
     "react-freeze": "^1.0.4",
-    "react-hook-form": "^7.42.1",
-    "react-i18next": "^13.2.1",
+    "react-hook-form": "^7.58.1",
+    "react-i18next": "^15.5.3",
     "react-idle-timer": "^5.7.2",
-    "react-is": "^19.1.0",
+    "react-is": "^19.0.0",
     "react-player": "^2.16.0",
     "react-qr-code": "^2.0.15",
-    "react-redux": "^8.0.5",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.3.0",
     "react-tooltip": "^5.25.1",
     "redux": "^4.2.0",
     "semver-compare": "^1.0.0",
-    "styled-components": "^6.1.8",
+    "styled-components": "^6.1.19",
     "stylis": "^4.0.0",
     "ts-json-schema-generator": "^1.5.0",
     "type-fest": "^3.5.1",
