--- a/apps/desktop-wallet/package.json
+++ b/apps/desktop-wallet/package.json
@@ -62,9 +62,9 @@
     "@alephium/shared-react": "workspace:*",
     "@alephium/token-list": "^0.0.19",
     "@alephium/typescript-config": "workspace:*",
-    "@alephium/walletconnect-provider": "2.0.0-rc.3",
-    "@alephium/web3": "2.0.0-rc.3",
-    "@alephium/web3-wallet": "2.0.0-rc.3",
+    "@alephium/walletconnect-provider": "2.0.0",
+    "@alephium/web3": "2.0.0",
+    "@alephium/web3-wallet": "2.0.0",
     "@electron/notarize": "^1.2.3",
     "@json-rpc-tools/utils": "^1.7.6",
     "@ledgerhq/devices": "^8.4.4",
