--- a/apps/desktop-wallet/package.json
+++ b/apps/desktop-wallet/package.json
@@ -114,13 +114,13 @@
     "lucide-react": "^0.287.0",
     "msw": "^2.7.0",
     "nanoid": "^3.3.8",
+    "overlayscrollbars-react": "^0.5.6",
     "posthog-js": "^1.52.0",
     "qrloop": "^1.4.1",
     "react": "19.0.0",
     "react-apexcharts": "^1.4.0",
     "react-color": "^2.19.3",
     "react-confetti": "^6.0.1",
-    "react-custom-scroll": "^7.0.0",
     "react-detect-click-outside": "^1.1.2",
     "react-dom": "19.0.0",
     "react-freeze": "^1.0.4",
