--- a/apps/mobile-wallet/eas.json
+++ b/apps/mobile-wallet/eas.json
@@ -14,6 +14,13 @@
     "internal": {
       "extends": "production",
       "distribution": "internal"
+    },
+    "release-apk": {
+      "extends": "production",
+      "autoIncrement": false,
+      "android": {
+        "buildType": "apk"
+      }
     }
   },
   "submit": {
