--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
       "base-x@<=3.0.10": ">=3.0.11",
       "brace-expansion@=1.1.11": "=1.1.12",
       "brace-expansion@=2.0.1": "=2.0.2",
-      "pbkdf2@<=3.1.2": ">=3.1.3"
+      "pbkdf2@<=3.1.2": ">=3.1.3",
+      "form-data@=3.0.1": "=3.0.4"
     }
   },
   "manypkg": {
