--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
       "brace-expansion@=1.1.11": "=1.1.12",
       "brace-expansion@=2.0.1": "=2.0.2",
       "pbkdf2@<=3.1.2": ">=3.1.3",
-      "form-data@=3.0.1": "=3.0.4"
+      "form-data@=3.0.1": "=3.0.4",
+      "sha.js@<=2.4.11": ">=2.4.12"
     }
   },
   "manypkg": {
