--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
       "brace-expansion@=2.0.1": "=2.0.2",
       "pbkdf2@<=3.1.2": ">=3.1.3",
       "form-data@=3.0.1": "=3.0.4",
-      "sha.js@<=2.4.11": ">=2.4.12"
+      "sha.js@<=2.4.11": ">=2.4.12",
+      "cipher-base@<=1.0.4": ">=1.0.5"
     }
   },
   "manypkg": {
