--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
       "pbkdf2@<=3.1.2": ">=3.1.3",
       "form-data@=3.0.1": "=3.0.4",
       "sha.js@<=2.4.11": ">=2.4.12",
-      "cipher-base@<=1.0.4": ">=1.0.5"
+      "cipher-base@<=1.0.4": ">=1.0.5",
+      "on-headers@<1.1.0": ">=1.1.0"
     }
   },
   "manypkg": {
