--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
       "brace-expansion@=2.0.1": "=2.0.2",
       "pbkdf2@<=3.1.2": ">=3.1.3",
       "form-data@=3.0.1": "=3.0.4",
+      "form-data@=4.0.0": ">=4.0.4",
       "sha.js@<=2.4.11": ">=2.4.12",
       "cipher-base@<=1.0.4": ">=1.0.5",
       "on-headers@<1.1.0": ">=1.1.0"
