--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
       "form-data@=4.0.0": ">=4.0.4",
       "sha.js@<=2.4.11": ">=2.4.12",
       "cipher-base@<=1.0.4": ">=1.0.5",
-      "on-headers@<1.1.0": ">=1.1.0"
+      "on-headers@<1.1.0": ">=1.1.0",
+      "tar-fs@=2.1.1": "=2.1.3"
     }
   },
   "manypkg": {
