--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
       "sha.js@<=2.4.11": ">=2.4.12",
       "cipher-base@<=1.0.4": ">=1.0.5",
       "on-headers@<1.1.0": ">=1.1.0",
-      "tar-fs@=2.1.1": "=2.1.3"
+      "tar-fs@=2.1.1": "=2.1.3",
+      "tmp@=0.2.1": "=0.2.4"
     }
   },
   "manypkg": {
