--- a/apps/desktop-wallet/package.json
+++ b/apps/desktop-wallet/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alephium-desktop-wallet",
   "description": "The official Alephium wallet",
-  "version": "3.1.1",
+  "version": "3.1.1-rc.1",
   "author": "Alephium dev <dev@alephium.org>",
   "main": "dist-electron/main.js",
   "homepage": "./",
