Force EAS_NO_FROZEN_LOCKFILE to 0

--- a/apps/mobile-wallet/eas.json
+++ b/apps/mobile-wallet/eas.json
@@ -9,7 +9,10 @@
     },
     "production": {
       "extends": "baseConfig",
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "EAS_NO_FROZEN_LOCKFILE": "0"
+      }
     },
     "internal": {
       "extends": "production",
