--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -81,6 +81,7 @@
     "expo-sensors": "~14.0.2",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.4",
     "expo-video": "~2.0.6",
     "expo-web-browser": "~14.0.2",
     "fast-text-encoding": "^1.0.6",
