--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -98,7 +98,6 @@
     "react-hook-form": "^7.42.1",
     "react-i18next": "^13.2.1",
     "react-native": "0.76.9",
-    "react-native-aes-crypto": "2.1.1",
     "react-native-background-timer": "^2.4.1",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-get-random-values": "~1.11.0",
@@ -107,6 +106,7 @@
     "react-native-mmkv": "^3.2.0",
     "react-native-pager-view": "6.5.1",
     "react-native-progress": "^5.0.0",
+    "react-native-quick-crypto": "0.7.17",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
