--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
     "postinstall": "pnpm check:deps"
   },
   "resolutions": {
-    "semver": "^7.5.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "@types/react": "~19.0.0",
-    "@types/react-dom": "^19.1.6"
+    "semver": "^7.5.2"
   },
   "engines": {
     "node": ">=20"
