--- a/apps/explorer/package.json
+++ b/apps/explorer/package.json
@@ -77,7 +77,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "^20.14.0",
-    "@types/react": "~19.0.0",
+    "@types/react": "19.0.14",
     "@types/react-dom": "^19.1.6",
     "@types/react-page-visibility": "^6.4.1",
     "@types/react-router-dom": "^5.3.0",
