--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -58,28 +58,28 @@
     "big-integer": "^1.6.51",
     "colord": "^2.9.3",
     "dayjs": "^1.10.7",
-    "expo": "53.0.12",
-    "expo-application": "~6.1.4",
+    "expo": "53.0.23",
+    "expo-application": "~6.1.5",
     "expo-blur": "~14.1.5",
-    "expo-build-properties": "~0.14.6",
-    "expo-camera": "~16.1.8",
+    "expo-build-properties": "~0.14.8",
+    "expo-camera": "~16.1.11",
     "expo-checkbox": "~4.1.4",
-    "expo-clipboard": "~7.1.4",
-    "expo-dev-client": "^5.2.1",
+    "expo-clipboard": "~7.1.5",
+    "expo-dev-client": "^5.2.4",
     "expo-device": "~7.1.4",
-    "expo-file-system": "~18.1.10",
-    "expo-font": "~13.3.1",
+    "expo-file-system": "~18.1.11",
+    "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.0",
+    "expo-image": "~2.4.0",
     "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "^7.1.5",
-    "expo-local-authentication": "~16.0.4",
-    "expo-localization": "~16.1.5",
-    "expo-navigation-bar": "~4.2.6",
-    "expo-screen-capture": "~7.1.4",
-    "expo-secure-store": "~14.2.3",
+    "expo-linking": "^7.1.7",
+    "expo-local-authentication": "~16.0.5",
+    "expo-localization": "~16.1.6",
+    "expo-navigation-bar": "~4.2.8",
+    "expo-screen-capture": "~7.2.0",
+    "expo-secure-store": "~14.2.4",
     "expo-sensors": "~14.1.4",
-    "expo-splash-screen": "~0.30.9",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-updates": "~0.28.17",
     "expo-video": "~2.2.2",
@@ -128,13 +128,13 @@
     "@alephium/typescript-config": "workspace:*",
     "@babel/core": "^7.26.0",
     "@types/lodash": "^4.14.182",
-    "@types/react": "~19.0.0",
+    "@types/react": "19.0.14",
     "@types/react-native-background-timer": "^2.0.2",
     "@walletconnect/types": "2.21.3",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.48.0",
     "jest": "^29.7.0",
-    "jest-expo": "~53.0.7",
+    "jest-expo": "~53.0.10",
     "ts-node": "^10.9.1",
     "typescript": "~5.8.3"
   },
