Update React versions

--- a/apps/desktop-wallet/package.json
+++ b/apps/desktop-wallet/package.json
@@ -77,9 +77,9 @@
     "@types/events": "^3.0.3",
     "@types/lodash": "^4.14.182",
     "@types/node": "^20.14.0",
-    "@types/react": "19.0.14",
+    "@types/react": "~19.0.14",
     "@types/react-color": "^3.0.6",
-    "@types/react-dom": "^19.1.6",
+    "@types/react-dom": "~19.1.6",
     "@types/semver-compare": "^1.0.1",
     "@types/zxcvbn": "^4.4.1",
     "@vitejs/plugin-react": "^4.3.4",
@@ -116,12 +116,12 @@
     "overlayscrollbars-react": "^0.5.6",
     "posthog-js": "^1.52.0",
     "qrloop": "^1.4.1",
-    "react": "19.0.0",
+    "react": "~19.0.0",
     "react-apexcharts": "^1.4.0",
     "react-color": "^2.19.3",
     "react-confetti": "^6.0.1",
     "react-detect-click-outside": "^1.1.2",
-    "react-dom": "19.0.0",
+    "react-dom": "~19.0.0",
     "react-freeze": "^1.0.4",
     "react-hook-form": "^7.58.1",
     "react-i18next": "^15.5.3",
