--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -93,8 +93,8 @@
     "nanoid": "^3.3.8",
     "posthog-react-native": "^2.7.1",
     "qrloop": "^1.4.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "~19.0.0",
+    "react-dom": "~19.0.0",
     "react-hook-form": "^7.58.1",
     "react-i18next": "^15.5.3",
     "react-native": "0.79.5",
@@ -128,7 +128,7 @@
     "@alephium/typescript-config": "workspace:*",
     "@babel/core": "^7.26.0",
     "@types/lodash": "^4.14.182",
-    "@types/react": "19.0.14",
+    "@types/react": "~19.0.14",
     "@types/react-native-background-timer": "^2.0.2",
     "@walletconnect/types": "2.21.3",
     "babel-plugin-module-resolver": "^5.0.2",
