--- a/apps/explorer/package.json
+++ b/apps/explorer/package.json
@@ -54,9 +54,9 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "lodash": "^4.17.21",
     "qrcode.react": "^3.1.0",
-    "react": "19.0.0",
+    "react": "~19.0.0",
     "react-apexcharts": "^1.4.0",
-    "react-dom": "19.0.0",
+    "react-dom": "~19.0.0",
     "react-i18next": "^15.5.3",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.10.3",
@@ -77,8 +77,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "^20.14.0",
-    "@types/react": "19.0.14",
-    "@types/react-dom": "^19.1.6",
+    "@types/react": "~19.0.14",
+    "@types/react-dom": "~19.1.6",
     "@types/react-page-visibility": "^6.4.1",
     "@types/react-router-dom": "^5.3.0",
     "@vitejs/plugin-react": "^4.3.4",
