--- a/packages/shared-react/package.json
+++ b/packages/shared-react/package.json
@@ -22,14 +22,14 @@
     "@tanstack/react-query": "^5.81.2",
     "axios": "^1.12.0",
     "lodash": "^4.17.21",
-    "react": "19.0.0",
+    "react": "~19.0.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@alephium/eslint-config": "workspace:*",
     "@alephium/typescript-config": "workspace:*",
     "@alephium/walletconnect-provider": "2.0.3",
-    "@types/react": "19.0.14",
+    "@types/react": "~19.0.14",
     "tsup": "^8.4.0",
     "typescript": "~5.8.3"
   }
