Replace screenshot prevention library
Closes #1549
Closes #1548

--- a/apps/mobile-wallet/android/app/build.gradle
+++ b/apps/mobile-wallet/android/app/build.gradle
@@ -91,6 +91,7 @@ android {
 
     namespace 'org.alephium.wallet'
     defaultConfig {
+		missingDimensionStrategy "react-native-capture-protection", "fullMediaCapture"
         applicationId 'org.alephium.wallet'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
