Update skia lib to fix 16 KB Android issue
Closes #1514

--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -44,7 +44,7 @@
     "@reown/walletkit": "^1.2.7",
     "@sentry/react-native": "^6.14.0",
     "@shopify/flash-list": "1.7.6",
-    "@shopify/react-native-skia": "2.0.0-next.4",
+    "@shopify/react-native-skia": "2.3.7",
     "@tanstack/query-sync-storage-persister": "^5.81.2",
     "@tanstack/react-query": "^5.81.2",
     "@tanstack/react-query-persist-client": "^5.81.2",
