--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
       "cipher-base@<=1.0.4": ">=1.0.5",
       "on-headers@<1.1.0": ">=1.1.0",
       "tar-fs@=2.1.1": "=2.1.3",
-      "tmp@=0.2.1": "=0.2.4"
+      "tmp@=0.2.1": "=0.2.4",
+      "react-server-dom-webpack@19.0.0": "=19.0.1"
     }
   },
   "manypkg": {
