Fix minimatch audit warnings

--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
       "js-yaml@=4.1.0": "=4.1.1",
       "h3@<=1.15.4": ">=1.15.5",
       "ajv@>=7.0.0-alpha.0 <8.18.0": ">=8.18.0",
-      "bn.js@<5.2.3": ">=5.2.3"
+      "bn.js@<5.2.3": ">=5.2.3",
+      "minimatch@<10.2.1": ">=10.2.1"
     }
   },
   "manypkg": {
