--- a/apps/mobile-wallet/package.json
+++ b/apps/mobile-wallet/package.json
@@ -105,7 +105,8 @@
     "react-native-get-random-values": "~1.11.0",
     "react-native-image-colors": "^2.5.1",
     "react-native-localize": "^3.2.0",
-    "react-native-mmkv": "^3.2.0",
+    "react-native-mmkv": "^3.3.3",
+    "react-native-nitro-modules": "^0.33.9",
     "react-native-pager-view": "6.9.1",
     "react-native-progress": "^5.0.0",
     "react-native-quick-crypto": "^1.0.14",
